tests/fixtures/invalid/pow_bytes_set.py
# Cannot call pow() with Bytes, Set[int]
x = pow(b"hello", {1, 2, 3})
